--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-twilio.sid=${TWILIO_SID}
+twilio.sid=${	}
 twilio.key=${TWILIO_KEY}
 twilio.phone.from=${TWILIO_PHONE_FROM}
 twilio.phone.to=${TWILIO_PHONE_TO}
